--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,4 +34,22 @@ jobs:
           
           # Name of the heroku application to which the build is to be sent.
           service-id: ${{ secrets.RENDER_SERVICE_ID }}
-          wait-for-succes: true
+          
+          # (Optional, default: "./")
+          # Dockerfile directory.
+          # For example, if you have a Dockerfile in the root of your project, leave it as follows:
+          dockerfile_directory: ./
+
+          # (Optional, default: "Dockerfile")
+          # Dockerfile name.
+          dockerfile_name: Dockerfile
+
+          # (Optional, default: "")
+          # Additional options of docker build command.
+          docker_options: "--no-cache"
+
+          # (Optional, default: "web")
+          # Select the process type for which you want the docker container to be uploaded.
+          # By default, this argument is set to "web".
+          # For more information look at https://devcenter.heroku.com/articles/process-model
+          process_type: web
